# Video-Lightning-Detector

./: LICENSE  README.md
LightningDetector/: CMakeLists.txt  INSTALL_DEPS.ps1  LightningDetector.exe - Shortcut.lnk  README.md  build.ps1  build_installer.ps1
LightningDetector/include/: LightningDetector.h
LightningDetector/installer/: LightningDetectorSetup.iss
LightningDetector/src/: LightningDetector.cpp  main_gui.cpp
